--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "thr": "3.3.x",
     "lat": "latest",
     "dyl": "file:../dyl",
-    "kpg": "npm:pkg@1.0.0"
+    "kpg": "npm:pkg@1.0.0",
+    "body-parser": "^1.17.1",
+    "express-validator": "^3.1.2",
+    "mongoose": "^4.8.7",
+    "nodemon": "^1.14.12"
   }
 }
